--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Study Guide – Cheetah WAEC</title>
+  <title>Contact – Cheetah WAEC</title>
   <link rel="stylesheet" href="assets/style.css" />
   <script defer src="assets/script.js"></script>
   <style>
@@ -51,6 +51,26 @@
 
     .content ul li {
       margin: 6px 0;
+    }
+
+    .card {
+      background: #fff;
+      border-radius: 18px;
+      padding: 22px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.04);
+      margin: 18px auto;
+    }
+
+    .link-list li a {
+      display: inline-flex;
+      gap: 10px;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .icon {
+      width: 22px;
+      text-align: center;
     }
 
     .content a {
@@ -102,45 +122,64 @@ a:hover {
     </div>
   </nav>
 
-  <div class="content" style="max-width: 800px; margin: 80px auto; padding: 0 20px; font-family: sans-serif;">
-    <h2 style="text-align: center;">📚  Our Mission</h2>
-    <p style="font-size: 18px; line-height: 1.8; color: #333; text-align: center;">
+  <div class="content" style="max-width: 900px; margin: 80px auto; padding: 0 20px; font-family: sans-serif;">
+    <div class="card">
+    <h2 style="text-align: center; margin-top: 0;">Our Mission</h2>
+    <p style="font-size: 18px; line-height: 1.8; color: #333; text-align: center; margin-top: 10px;">
       At <strong>Cheetah WAEC</strong>, our mission is to 
       <strong>empower students across West Africa</strong> with free, high-quality, and accessible tools to master mathematics.
       We are committed to supporting <strong>equitable education</strong> by providing a modern, interactive platform 
       that simplifies learning, encourages practice, and builds confidence—especially for students preparing for the <strong>WAEC examination</strong>.
     </p>
-    <p style="font-size: 18px; line-height: 1.8; color: #333; text-align: center;">
+    <p style="font-size: 18px; line-height: 1.8; color: #333; text-align: center; margin-top: 10px;">
       We believe <strong>every student deserves the opportunity to succeed</strong>, and we’re here to bridge the gap 
       with engaging content, smart technology, and a supportive learning community.
     </p>
+    <p style="font-size: 18px; line-height: 1.8; color: #333; text-align: center; margin-top: 10px;">
+      We are building a community around WAEC preparation. If you are a passionate educator, tutor, or content creator
+      and want to help students learn better, we would love to work with you.
+    </p>
+    </div>
   </div>
   
 
-  <div class="content">
+  <div class="content" style="max-width: 900px;">
+    <div class="card">
+      <h2 style="text-align: center; margin-top: 0;">Contact Us</h2>
+      <ul class="link-list" style="font-size: 18px; line-height: 2; text-align: center; list-style: none; padding: 0; margin: 0;">
+        <li>
+          <a href="mailto:cheetahwaec@gmail.com">
+            <span class="icon">✉</span>
+            cheetahwaec@gmail.com
+          </a>
+        </li>
+        <li>
+          <a href="https://www.reddit.com/r/CheetahWAEC/" target="_blank">
+            <span class="icon">◯</span>
+            Reddit: r/CheetahWAEC
+          </a>
+        </li>
+      </ul>
+    </div>
 
-    <h2 style="text-align: center;">Contact Us</h2>
-    <ul style="font-size: 18px; line-height: 2; text-align: center; list-style: none; padding: 0;">
-
-      <li><a href="mailto:cheetahwaec@gmail.com">Email: cheetahwaec@gmail.com</a></li>
-    </ul>
-    <h2 style="text-align: center;">Follow Us Online</h2>
-    <ul style="font-size: 18px; line-height: 2; text-align: center; list-style: none; padding: 0;">
-      <li><a href="https://www.tiktok.com/@cheetahwaec" target="_blank">TikTok: @cheetahwaec</a></li>
-      <li><a href="https://www.instagram.com/cheetahwaec" target="_blank">Instagram: @cheetahwaec</a></li>
-      <li><a href="https://m.facebook.com/61575094883653/" target="_blank">Facebook: @cheetahwaec</a></li>
-        <li><a href="/practice.html">Practice: solve questions with instant feedback</a></li>
-      <li><a href="https://t.me/cheetahwaec" target="_blank">Telegram Channel: @cheetahwaec</a></li>
-      <li><a href="https://chat.whatsapp.com/H0apT6YvvvMGonRP0lkpa1" target="_blank">WhatsApp Chat</a></li>
-
-    </ul>
+    <div class="card">
+      <h2 style="text-align: center; margin-top: 0;">Follow Us Online</h2>
+      <ul class="link-list" style="font-size: 18px; line-height: 2; text-align: center; list-style: none; padding: 0; margin: 0;">
+        <li><a href="https://www.tiktok.com/@cheetahwaec" target="_blank"><span class="icon">♪</span>TikTok: @cheetahwaec</a></li>
+        <li><a href="https://www.instagram.com/cheetahwaec" target="_blank"><span class="icon">◎</span>Instagram: @cheetahwaec</a></li>
+        <li><a href="https://m.facebook.com/61575094883653/" target="_blank"><span class="icon">f</span>Facebook: @cheetahwaec</a></li>
+        <li><a href="https://t.me/cheetahwaec" target="_blank"><span class="icon">↗</span>Telegram Channel: @cheetahwaec</a></li>
+        <li><a href="https://chat.whatsapp.com/H0apT6YvvvMGonRP0lkpa1" target="_blank"><span class="icon">⟐</span>WhatsApp Chat</a></li>
+      </ul>
+    </div>
   </div>
   
 
   <footer>
-    <p>&copy; 2025 Cheetah WAEC. All rights reserved.</p>
+    <p>&copy; 2026 Cheetah WAEC. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
 
 
