--- a/index.html
+++ b/index.html
@@ -73,13 +73,8 @@
             <h1>Master WAEC Mathematics with Speed and Precision</h1>
             <p style="max-width: 720px; margin-top: 12px; color: #555; font-size: 18px; line-height: 1.6;">
               Learn faster with simple explanations, real WAEC past questions, and Practice mode with instant feedback.
+              Best math practice tool for WAEC and completely FREE.
             </p>
-            <div style="max-width: 720px; margin-top: 14px; color: #333; font-size: 16px; line-height: 1.6;">
-              <div style="font-weight: 800; margin-bottom: 6px;">Start here:</div>
-              <div>1) Read the Study Guide</div>
-              <div>2) Download Past Papers</div>
-              <div>3) Use Practice (sign in with Google once)</div>
-            </div>
         </div>
     </section>
 
@@ -87,7 +82,7 @@
         <div class="container">
             <div class="feature-box">
                 <h3>Practice</h3>
-                <p>Solve questions in batches of 10 and get instant feedback. (Sign in first.)</p>
+                <p>Solve real past paper questions and get instant AI-powered feedback. (Sign in first.)</p>
                 <a href="/practice.html" class="black-button" >Open Practice</a>
             </div>
             <div class="feature-box">
@@ -104,9 +99,10 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Cheetah WAEC. All rights reserved.</p>
+        <p>&copy; 2026 Cheetah WAEC. All rights reserved.</p>
       </footer>
 </body>
 </html>
+
 
 
