--- a/subscribe.html
+++ b/subscribe.html
@@ -105,24 +105,26 @@ a:hover {
     <h2 style="font-size: 32px; margin-bottom: 20px;">Donate</h2>
 
     <p style="font-size: 18px; line-height: 1.6; color: #333;">
-      If Cheetah WAEC helps you, consider donating. Your support keeps the site running and helps us add more questions,
-      solutions, and practice features.
+      We are building Cheetah WAEC to make high-quality WAEC Mathematics practice available to everyone, for free.
+      For many students, a strong WAEC result can be a real turning point: more confidence, more options, and a chance to change their life.
     </p>
 
-    <a href="https://ko-fi.com/cheetahwaec" target="_blank" style="display: inline-block; background-color: #111; color: white; font-weight: bold; font-size: 18px; padding: 12px 24px; border-radius: 10px; margin: 18px 0; text-decoration: none;">
-      Donate on Ko-fi
-    </a>
+    <p style="font-size: 18px; line-height: 1.6; color: #333; margin-top: 12px;">
+      Running this platform is not free for us (hosting, storage, and development time). If you would like to support the project,
+      please contact us and we will reply with donation options.
+    </p>
 
     <p class="muted" style="margin-top: 10px;">
-      Thank you for supporting students across West Africa.
+      Email: <a href="mailto:cheetahwaec@gmail.com">cheetahwaec@gmail.com</a>
     </p>
   </div>
   
 
   <footer>
-    <p>&copy; 2025 Cheetah WAEC. All rights reserved.</p>
+    <p>&copy; 2026 Cheetah WAEC. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
 
 
