--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@ a:hover {
     </div>
   </nav>
 
-  <div class="content" style="max-width: 900px; margin: 80px auto; padding: 0 20px; font-family: sans-serif;">
+  <div class="content" style="max-width: 900px; margin: 80px auto 20px auto; padding: 0 20px; font-family: sans-serif;">
     <div class="card">
     <h2 style="text-align: center; margin-top: 0;">Our Mission</h2>
     <p style="font-size: 18px; line-height: 1.8; color: #333; text-align: center; margin-top: 10px;">
@@ -149,7 +149,7 @@ a:hover {
   </div>
   
 
-  <div class="content" style="max-width: 900px;">
+  <div class="content" style="max-width: 900px; margin: 0 auto 60px auto; padding: 0 20px; font-family: sans-serif;">
     <div class="card">
       <h2 style="text-align: center; margin-top: 0;">Contact Us</h2>
       <ul class="link-list" style="font-size: 18px; line-height: 2; text-align: center; list-style: none; padding: 0; margin: 0;">
