--- a/past-papers.html
+++ b/past-papers.html
@@ -110,6 +110,13 @@
   text-decoration: underline;
 }
 
+    /* Ensure CTA button text stays white inside `.content` */
+    .content a.black-button,
+    .content a.black-button:hover {
+      color: #fff;
+      text-decoration: none;
+    }
+
     footer {
       margin-top: 80px;
       text-align: center;
