Fix favicon serving + improve practice SEO

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="icon" href="/favicon.ico" />
     <!-- Primary Meta Tags -->
 <meta name="title" content="Cheetah WAEC – Master WAEC Mathematics with Speed and Precision">
 <meta name="description" content="Free WAEC Math study guide, past papers, and Practice mode with instant AI-powered feedback. Best math practice tool for WAEC and completely FREE.">
