--- a/practice.html
+++ b/practice.html
@@ -17,10 +17,75 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="icon" href="/favicon.ico" />
-  <title>Practice – Cheetah WAEC</title>
-  <meta name="description" content="Practice real WAEC math past questions by topic or year. Get instant feedback for MCQ and AI feedback for written answers (FRQ).">
+
+  <!-- Primary Meta Tags -->
+  <title>WAEC &amp; WASSCE Maths Past Questions Practice | Cheetah WAEC</title>
+  <meta name="title" content="WAEC &amp; WASSCE Maths Past Questions Practice | Cheetah WAEC">
+  <meta name="description" content="Practice WAEC/WASSCE maths past questions (past papers) by topic or year. Instant MCQ checks + AI feedback for written answers. Free practice tool for WAEC mathematics.">
+  <meta name="keywords" content="WAEC maths past questions, WAEC math past papers, WAEC mathematics past questions and answers, WASSCE maths past questions and answers, WASSCE math past papers, WAEC past questions pdf, download WAEC past questions pdf with answers, WAEC exam practice, WAEC mathematics practice">
+  <meta name="author" content="Cheetah WAEC">
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <meta name="theme-color" content="#F8F6F2">
+  <link rel="canonical" href="https://cheetahwaec.com/practice.html" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://cheetahwaec.com/practice.html">
+  <meta property="og:title" content="WAEC &amp; WASSCE Maths Past Questions Practice | Cheetah WAEC">
+  <meta property="og:description" content="Practice WAEC/WASSCE maths past questions by topic or year. Instant MCQ checks + AI feedback for written answers.">
+  <meta property="og:image" content="https://cheetahwaec.com/assets/images/logo.png">
+  <meta property="og:site_name" content="Cheetah WAEC">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="WAEC &amp; WASSCE Maths Past Questions Practice | Cheetah WAEC">
+  <meta name="twitter:description" content="Practice WAEC/WASSCE maths past questions by topic or year. Instant MCQ checks + AI feedback for written answers.">
+  <meta name="twitter:image" content="https://cheetahwaec.com/assets/images/logo.png">
+
   <link rel="stylesheet" href="assets/style.css" />
   <script defer src="assets/script.js"></script>
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "WAEC & WASSCE Maths Past Questions Practice",
+      "url": "https://cheetahwaec.com/practice.html",
+      "description": "Practice WAEC/WASSCE maths past questions (past papers) by topic or year with instant MCQ checks and AI feedback for written answers.",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "Cheetah WAEC",
+        "url": "https://cheetahwaec.com/"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Cheetah WAEC",
+        "url": "https://cheetahwaec.com/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://cheetahwaec.com/assets/images/logo.png"
+        }
+      }
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Cheetah WAEC Practice",
+      "url": "https://cheetahwaec.com/practice.html",
+      "applicationCategory": "EducationalApplication",
+      "operatingSystem": "All",
+      "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" },
+      "description": "WAEC/WASSCE maths past questions practice by topic or year with instant MCQ checks and AI feedback for written answers.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Cheetah WAEC",
+        "url": "https://cheetahwaec.com/"
+      }
+    }
+  </script>
 
   <!-- MathJax (problem_text/solution_text already contain LaTeX like \(..\) / \[..\]) -->
   <script>
@@ -254,7 +319,7 @@
         <div>
           <h2 class="section-title">Practice</h2>
           <p class="muted subtitle">
-            Pick a mode and solve questions in pages of 10. Your answers are checked instantly, and you can reveal full solutions.
+            Practice WAEC/WASSCE maths past questions (past papers) by topic or year in pages of 10. Your answers are checked instantly, and you can reveal full solutions.
           </p>
           <div class="hint" style="margin-top: 12px;">
             <div class="muted">Signed in as</div>
