Fix policy page encoding

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="icon" href="/favicon.ico" />
 
-  <title>About â€“ CheetahWAEC</title>
+  <title>About - CheetahWAEC</title>
   <meta name="description" content="Learn about CheetahWAEC: our mission to make WAEC preparation accessible with past questions, solutions, and practical practice tools." />
   <link rel="canonical" href="https://cheetahwaec.com/about" />
 
@@ -57,7 +57,7 @@
           <span>Cheetah WAEC</span>
         </a>
       </h1>
-      <button class="menu-toggle">â˜°</button>
+      <button class="menu-toggle">&#9776;</button>
       <ul class="nav-links">
         <li><a href="/">Home</a></li>
         <li><a href="/study-guide">Study Guide</a></li>
@@ -80,7 +80,7 @@
     <div class="card">
       <h2>Our mission</h2>
       <p>
-        Our mission is to make WAEC preparation accessible, clear, and practicalâ€”especially for students who donâ€™t have access
+        Our mission is to make WAEC preparation accessible, clear, and practical - especially for students who don't have access
         to expensive tutoring or paid materials.
       </p>
     </div>
@@ -91,7 +91,7 @@
         <li><strong>Study Guide:</strong> topic-by-topic notes with examples.</li>
         <li><strong>Past Papers:</strong> real WAEC-style questions to practice.</li>
         <li><strong>Practice mode:</strong> solve questions and get instant feedback.</li>
-        <li><strong>Solutions & explanations:</strong> step-by-step help when youâ€™re stuck.</li>
+        <li><strong>Solutions & explanations:</strong> step-by-step help when you're stuck.</li>
       </ul>
     </div>
 
