--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="icon" href="/favicon.ico" />
 
-  <title>Contact â€“ CheetahWAEC</title>
+  <title>Contact - CheetahWAEC</title>
   <meta name="description" content="Contact CheetahWAEC for support, feedback, and corrections. Use the contact form or email support@cheetahwaec.com." />
   <link rel="canonical" href="https://cheetahwaec.com/contact" />
 
@@ -113,7 +113,7 @@
           <span>Cheetah WAEC</span>
         </a>
       </h1>
-      <button class="menu-toggle">â˜°</button>
+      <button class="menu-toggle">&#9776;</button>
       <ul class="nav-links">
         <li><a href="/">Home</a></li>
         <li><a href="/study-guide">Study Guide</a></li>
@@ -132,14 +132,14 @@
         Send feedback, report an error, or ask a question. We read every message.
       </p>
       <p class="muted" style="margin-top:6px;">
-        Please donâ€™t send passwords or sensitive personal information.
+        Please don't send passwords or sensitive personal information.
       </p>
     </div>
 
     <div class="card">
       <h2 style="margin: 0 0 8px 0;">Contact form</h2>
       <p class="muted" style="margin-top: 0;">
-        This form is a placeholder endpoint for now. If it doesnâ€™t work on your device, email us instead.
+        This form is a placeholder endpoint for now. If it doesn't work on your device, email us instead.
       </p>
 
       <form action="/api/contact" method="post">
