--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -18,7 +18,7 @@
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="icon" href="/favicon.ico" />
 
-  <title>Privacy Policy â€“ CheetahWAEC</title>
+  <title>Privacy Policy - CheetahWAEC</title>
   <meta name="description" content="Privacy Policy for CheetahWAEC (cheetahwaec.com): what data we collect, cookies, Google AdSense advertising, and how to contact us." />
   <link rel="canonical" href="https://cheetahwaec.com/privacy-policy" />
 
@@ -57,7 +57,7 @@
           <span>Cheetah WAEC</span>
         </a>
       </h1>
-      <button class="menu-toggle">â˜°</button>
+      <button class="menu-toggle">&#9776;</button>
       <ul class="nav-links">
         <li><a href="/">Home</a></li>
         <li><a href="/study-guide">Study Guide</a></li>
@@ -73,7 +73,7 @@
     <div class="card">
       <h1>Privacy Policy</h1>
       <p class="muted" style="margin-top:6px;">
-        This Privacy Policy explains how CheetahWAEC (â€œweâ€, â€œusâ€) handles information when you use cheetahwaec.com.
+        This Privacy Policy explains how CheetahWAEC ("we", "us") handles information when you use cheetahwaec.com.
       </p>
       <p class="muted" style="margin-top:6px;">
         Last updated: February 6, 2026.
@@ -110,11 +110,11 @@
       </p>
       <p>
         <strong>Google AdSense:</strong> We may show ads served by Google AdSense. Google and third-party vendors may use cookies
-        to serve ads based on a userâ€™s prior visits to this website and/or other websites.
+        to serve ads based on a user's prior visits to this website and/or other websites.
       </p>
       <ul>
-        <li>Users can personalize ads in Googleâ€™s Ads Settings.</li>
-        <li>Users can also opt out of personalized advertising by visiting Googleâ€™s Ads Settings.</li>
+        <li>Users can personalize ads in Google's Ads Settings.</li>
+        <li>Users can also opt out of personalized advertising by visiting Google's Ads Settings.</li>
       </ul>
       <p class="muted">
         Note: Ad partners and vendors may have their own privacy policies. We do not control their cookies directly.
@@ -138,7 +138,7 @@
     </div>
 
     <div class="card">
-      <h2>Childrenâ€™s privacy</h2>
+      <h2>Children's privacy</h2>
       <p>
         CheetahWAEC is designed for students and may be used by minors. We do not knowingly collect personal information from
         children under 13. If you believe a child under 13 has provided personal data to us, please contact us and we will
