--- a/terms.html
+++ b/terms.html
@@ -18,7 +18,7 @@
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="icon" href="/favicon.ico" />
 
-  <title>Terms of Use â€“ CheetahWAEC</title>
+  <title>Terms of Use - CheetahWAEC</title>
   <meta name="description" content="Terms of Use for CheetahWAEC (cheetahwaec.com): educational disclaimer, user responsibilities, intellectual property, and limitations." />
   <link rel="canonical" href="https://cheetahwaec.com/terms" />
 
@@ -57,7 +57,7 @@
           <span>Cheetah WAEC</span>
         </a>
       </h1>
-      <button class="menu-toggle">â˜°</button>
+      <button class="menu-toggle">&#9776;</button>
       <ul class="nav-links">
         <li><a href="/">Home</a></li>
         <li><a href="/study-guide">Study Guide</a></li>
